--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
+    "autoprefixer": "10.4.19",
+    "postcss": "8.4.38",
     "prisma": "5.18.0",
+    "tailwindcss": "3.4.10",
+    "tsx": "4.16.2",
     "typescript": "5.5.4"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
